Fixed a minor bug where the to-dos would shrink in size instead of overflowing

--- a/src/Style/main.css
+++ b/src/Style/main.css
@@ -23,6 +23,8 @@ body {
     position: fixed;
     width: 100vw;
     z-index: 11;
+    right: 1%;
+    
 }
 
 .menu {
