--- a/src/Style/projects.css
+++ b/src/Style/projects.css
@@ -323,16 +323,16 @@
     position: fixed;
     background: rgba(0,0,0, 0.5);
     box-shadow: -15px 15px 25px rgba(0,0,0,.7);
-    overflow: hidden;
     z-index: 13;
     backdrop-filter: blur(5px);
     display: grid;
     grid-template-columns: 90% 10%;
     grid-template-rows: 10% 90%;
-    overflow-y: scroll;
     border-radius: 10px;
+    overflow: hidden;
     font-family:'Roboto Mono', monospace;
     animation: scale 0.15s linear 0s ;
+    overflow-y: scroll;
 
 
 }
@@ -358,6 +358,7 @@
     font-family: 'Roboto Mono', monospace;
     display: flex;
     justify-content: space-between;
+    margin-right: 20px;
 }
 
 
@@ -457,11 +458,18 @@
 }
 
 .todos {
-
+    
+    position: absolute;
+    width: 90%;
     grid-row-start: 2;
     display: flex;
     flex-direction: column;
-    gap: 3%;
+
+    gap: 25px;
+    overflow: hidden;
+    
+
+    
 
 }
 
@@ -471,13 +479,13 @@
     margin-right: 5%;
     border-radius: 50px;
     padding-left: 35px;
-    height: 20%;
     margin-left: 15px;
+    height: 19vh;
     display: grid;
     grid-template-columns: 80% 20%;
     grid-template-rows: 38% 32% 30%;
     gap: 5px;
-    overflow: hidden;
+    
 
 }
 
@@ -504,7 +512,7 @@
 
     position: absolute;
     left: 1.2rem;
-    top: 1.3rem;
+    top: 1.65rem;
     transition: top 200ms ease-in,
                 font-size 200ms ease-in,
                 padding 200ms ease-in;
@@ -606,20 +614,19 @@
 }
 
 .to-do-confirm:hover {
-    background: #002D38;
+    background: #002D38 ;
 }
 
 ::-webkit-scrollbar {
 
-    width: 1.5em;
+    width: 1em;
     
 }
 
 ::-webkit-scrollbar-track {
 
     
-    border-radius: 10px;
-    margin-block: 3em;
+    
     background: #007A9A;
 }
 
